Simplify footer until fix link colors
Also, need to find a new Creative Commons icon

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,37 +1,9 @@
 <footer class="footer has-background-dark has-text-light">
   <div class="content has-text-centered">
+    <!-- TODO: Add Creative Commons link -->
     <p>
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-        <img alt="Creative Commons License" style="border-width:0"
-          src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
-      </a>
-      <br />
-      This work is licensed under a
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-        Creative Commons Attribution-ShareAlike 4.0 International License
-      </a>.
-    </p>
-    <p>
-      <!-- TODO: Add the django icon to the link -->
-      Built with <a href="https://www.djangoproject.com/">Django</a>
+      Built with <a href="https://www.djangoproject.com/"><span id="django-logo">django</span></a>
       and <a href="https://bulma.io"><span id="bulma-logo">Bulma</span></a>
-    </p>
-    <p>
-      Icons made by
-      <a href="http://www.freepik.com" title="Freepik" target="_blank"
-        rel="noopener noreferrer">Freepik</a>
-      from
-      <a href="https://www.flaticon.com/" title="Flaticon" target="_blank"
-        rel="noopener
-        noreferrer">
-        www.flaticon.com
-      </a>
-      is licensed by
-      <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative
-        Commons BY 3.0"
-        target="_blank" rel="noopener noreferrer">
-        CC 3.0 BY
-      </a>
     </p>
   </div>
 </footer>
