--- a/static/site/css/base.css
+++ b/static/site/css/base.css
@@ -6,6 +6,15 @@
     max-height: 3rem;
 }
 
+#django-logo {
+    padding-bottom: 2px;
+    background: url(https://static.djangoproject.com/img/logos/django-logo-negative.png) no-repeat center;
+    filter: grayscale(1) invert(0.02);
+    background-size: 52px 25.5px;
+    background-position: -1px -2px;
+    color: #00000000;
+}
+
 #bulma-logo {
     padding-left: 18px;
     height: 20px;
