--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -143,7 +143,8 @@
     <!-- misc info -->
     <div class="column is-one-fifth">
       <div class="box">
-        <p><b>Publisher:</b> {{ series.publisher }}</p>
+        <h1 class="title is-6">Series Details</h1>
+        <p><b>Publisher:</b> <a href="{% url 'publisher:detail' series.publisher.slug %}">{{ series.publisher }}</p></a>
         <p><b>Type:</b> {{ series.series_type }}</p>
         {% if series.volume %}
           <p><b>Volume:</b> {{ series.volume }}</p>
