Use autocomplete for series name on issue form

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -6,7 +6,6 @@
 
 {% block comic_content %}
   <h1 class="title">{{ form|get_class }}</h1>
-  {{ form.media }}
   <form method="post" enctype="multipart/form-data">
     {%csrf_token%}
     <!-- main -->
@@ -32,7 +31,7 @@
         <label class="label">{{ field.label }}</label>
         {% if field|is_select %}
           <div class="control">
-            <div class="select {% if field|is_multiple_select %}is-multiple{% endif %}">
+            <div class="select is-fullwidth {% if field|is_multiple_select %}is-multiple{% endif %}">
               {{ field }}
             </div>
           </div>
@@ -51,6 +50,7 @@
     <!-- credits -->
     <label class="label">Credits</label>
     {{ credits.management_form }}
+    {{ credits.non_form_errors }}
     {{ credits.media }}
 
     {% for form in credits.forms %}
@@ -63,6 +63,7 @@
                 {{ hidden }}
               {% endfor %}
             {% endif %}
+            {{ field.errors.as_ul }}
             <div class="field">
               {% if field|is_select %}
                 <div class="control is-expanded">
@@ -96,6 +97,7 @@
 {% endblock %}
 
 {% block js %}
+{{ form.media }}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
 <script src="{% static 'site/js/issue-slug.js' %}"></script>
