Update section about Desaad

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -54,11 +54,9 @@
           <br />
           <h1 class="title is-5">Future Projects</h1>
           <h2 class="subtitle is-6">
-            Initial work has started on a comic server, and with any luck I'll be moving it to a
-            public git repository once it's in
-            a functional state for public consumption. Most likely it will be late September or
-            October (dependent on the amount of free
-            time I have).
+            Initial work has begun on <a href="https://github.com/bpepple/desaad">Desaad</a> a
+            comic server using Metron data. It's not production ready yet, but hopefully in early
+            2020 it will be ready for users.
           </h2>
         </div>
         <!-- end info box -->
