--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -11,7 +11,7 @@
   <section class="hero">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-3">Issue{{ issue_list.count|pluralize }} List</h1>
+        <h1 class="title is-3">{% if title %}{{ title }} {% endif %}Issue{{ issue_list.count|pluralize }}</h1>
       </div>
     </div>
   </section>
