--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -10,7 +10,7 @@
   <section class="hero">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-3">Series List</h1>
+        <h1 class="title is-3">{% if title %}{{ title }} {% endif %}Series</h1>
       </div>
     </div>
   </section>
