Use a better title on the variant form

--- a/comicsdb/templates/comicsdb/model_with_image_form.html
+++ b/comicsdb/templates/comicsdb/model_with_image_form.html
@@ -5,7 +5,7 @@
 {% block title %}{{ form.instance }} Form{% endblock title %}
 
 {% block comic_content %}
-  <h1 class="title">{{ form|get_class }}</h1>
+  <h1 class="title">{{ title }}</h1>
   {{ form.media }}
   <form method="post" enctype="multipart/form-data">
     {%csrf_token%}
