Change the title on the issue form

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -5,7 +5,7 @@
 {% block title %}Issue Form{% endblock title %}
 
 {% block comic_content %}
-  <h1 class="title">{{ form|get_class }}</h1>
+  <h1 class="title">Issue Form</h1>
   <form method="post" enctype="multipart/form-data">
     {%csrf_token%}
     <!-- main -->
