--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -3,39 +3,39 @@
 {% load chartkick %}
 
 {% block headscripts %}
-  <script src="https://www.google.com/jsapi"></script>
-  <script src="{% static 'chartkick.js' %}"></script>
+<script src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="{% static 'chartkick.js' %}"></script>
 {% endblock %}
 
 {% block content %}
-  <!-- hero -->
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title is-3">Metron Database Statistics</h1>
-      </div>
+<!-- hero -->
+<section class="hero">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title is-3">Metron Database Statistics</h1>
     </div>
-  </section>
-  <!-- end hero -->
-  <!-- statistics -->
-  <section>
-    <div class="container">
-      <div class="box">
-        {% pie_chart publisher_counts with id='chart-1' height='400px' library={"title":"Issue Counts Per Publisher", "sliceVisibilityThreshold": ".02"} %}
-      </div>
-      <div class="box">
-        {% column_chart daily_issue_count with id='chart-2' library={"title":"Issues Added During The Last 30 Days",} %}
-      </div>
-      <div class="box">
-        {% column_chart monthly_issue_count with id='chart-3' library={"title":"Issues Added Per Month",} %}
-      </div>
-      <div class="box">
-        {% column_chart monthly_creator with id='chart-4' library={"title":"Creators Added Per Month",} %}
-      </div>
-      <div class="box">
-        {% column_chart monthly_character with id='chart-5' library={"title":"Characters Added Per Month",} %}
-      </div>
+  </div>
+</section>
+<!-- end hero -->
+<!-- statistics -->
+<section>
+  <div class="container">
+    <div class="box">
+      {% pie_chart publisher_counts with id='chart-1', library={'title':'Publisher Percentage of Issues', 'sliceVisibilityThreshold': '.02', 'legend': 'bottom'} %}
     </div>
-  </section>
-  <!-- end statistics -->
+    <div class="box">
+      {% column_chart daily_issue_count with id='chart-2' library={"title":"Daily Count of Issues Added",} %}
+    </div>
+    <div class="box">
+      {% column_chart monthly_issue_count with id='chart-3' library={"title":"Monthly Count of Issues Added",} %}
+    </div>
+    <div class="box">
+      {% column_chart monthly_creator with id='chart-4' library={"title":"Monthly Count of Creators Added",} %}
+    </div>
+    <div class="box">
+      {% column_chart monthly_character with id='chart-5' library={"title":"Monthly Count of Characters Added",} %}
+    </div>
+  </div>
+</section>
+<!-- end statistics -->
 {% endblock %}
