Let's use a star icon next for the New Comics item

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'week:list' %}">
         <span class="icon">
-          <i class="fas fa-plus-square"></i>
+          <i class="fas fa-star"></i>
         </span>
         <span>New Comics</span>
       </a>
