Update wording on week list page
Due to COVID-19 publishing changes.

--- a/comicsdb/templates/comicsdb/week_list.html
+++ b/comicsdb/templates/comicsdb/week_list.html
@@ -11,7 +11,7 @@
   <section class="hero">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title is-3">Comic{{ issue_list.count|pluralize }} released on {{ release_day|date:'F d, Y' }}</h1>
+        <h1 class="title is-3">Comic{{ issue_list.count|pluralize }} released the week of {{ release_day|date:'F d, Y' }}</h1>
       </div>
     </div>
   </section>
