--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -58,7 +58,11 @@
               <div class="card">
                 <!-- card header -->
                 <header class="card-header">
+                {% if issue.is_past_created %}
                   <p class="card-header-title is-centered">{{ issue }}</p>
+                {% else %}  
+                  <p class="card-header-title is is-centered">{{ issue }}&nbsp;<span class="tag is-primary is-rounded">New!</span></p>
+                {% endif %}
                 </header>
                 <!-- end card header -->
                 <!-- card image -->
