--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -1,6 +1,7 @@
 {% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load humanize %}
+{% load is_new %}
 {% load static %}
 
 {% block sitedesc %}<meta name="description" content="Metron is a comic book database. It aims to
@@ -72,11 +73,9 @@
               <div class="card">
                 <!-- card header -->
                 <header class="card-header">
-                {% if issue.is_past_created %}
-                  <p class="card-header-title is-centered">{{ issue }}</p>
-                {% else %}  
-                  <p class="card-header-title is is-centered">{{ issue }}&nbsp;<span class="tag is-primary is-rounded">New!</span></p>
-                {% endif %}
+                {% with issue.created_on|is_new as is_new %}
+                  <p class="card-header-title is is-centered">{{ issue }}{% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}</p>
+                {% endwith %}
                 </header>
                 <!-- end card header -->
                 <!-- card image -->
