--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -123,7 +123,7 @@
       </div>
       {% else %}
       <div class="navbar-item">
-        <a class="button is-primary" href="{% url 'signup' %}">
+        <a class="button is-primary" href="" disabled>
           <span class="icon">
             <i class="fas fa-user-plus"></i>
           </span>
