Add message about disabled signups on home page.

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -44,6 +44,7 @@
               Guidelines</a>
             before adding information to the database. If you have any questions, please
             <a href="{% url 'contact:email' %}">contact</a> me.
+            <br /><b>Note:</b> Currently new account sign-ups are disabled until CAPTCHA support is added due to bot spam. 🙁
           </h2>
           <br />
           <h1 class="title is-5">Need to tag your comic archives?</h1>
