Revert "Disable signups until CAPTCHA  is implemented"
This reverts commit 76523ffe69e7bc41500f29aaa2e02640cccacf60.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -123,7 +123,7 @@
       </div>
       {% else %}
       <div class="navbar-item">
-        <a class="button is-primary" href="" disabled>
+        <a class="button is-primary" href="{% url 'signup' %}">
           <span class="icon">
             <i class="fas fa-user-plus"></i>
           </span>
