--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -5,7 +5,7 @@
 {% block title %}Issue Form{% endblock title %}
 
 {% block headscripts %}
-<script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+
 {% endblock %}
 
 {% block comic_content %}
@@ -101,6 +101,8 @@
 {% endblock %}
 
 {% block js %}
+<script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+{{ credits.media }}
 <script src="{% static 'admin/js/vendor/xregexp/xregexp.min.js' %}"></script>
 <script src="{% static 'admin/js/urlify.js' %}"></script>
 <script src="{% static 'site/js/issue-slug.js' %}"></script>
