Rework signup / login
* Moved url location to accounts
* Add forgot password link to login page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -39,6 +39,9 @@
             <button class="button is-link" type="submit">Login</button>
           </div>
         </div>
+        <div class="field">
+          <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+        </div>
       </form>
     </div>
   </section>
